--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
       <button class="lang" onclick="toggleLang()">🌍 English</button>
     </div>
 
-    <!-- Banner -->
     <img src="gg.png" alt="Growfax Banner" class="banner">
 
     <h1 id="title">Growfax — Download Files</h1>
@@ -164,8 +163,8 @@
     <div id="clock">Sydney Time: --:--:--</div>
 
     <a class="btn btn-download" href="Growfax_Vhost.txt" download id="btn1">Download — Virtual Host</a>
-    <a class="btn btn-download" href="Growfax_Ptunnel.txt" download id="btn2">Download — Powertunnel</a>
-    <a class="btn btn-download" href="Growfax_Surge5.txt" download id="btn3">Download — iOS (Surge)</a>
+    <a class="btn btn-download" href="data:text/plain;charset=utf-8,91.134.85.13%20growtopia1.com%0A91.134.85.13%20growtopia2.com%0A91.134.85.13%20www.growtopia1.com%0A91.134.85.13%20www.growtopia2.com" download="Growfax_Ptunnel.txt" id="btn2">Download — Powertunnel</a>
+    <a class="btn btn-download" href="data:text/plain;charset=utf-8,%5BGeneral%5D%0Abypass-system%20%3D%20true%0A%0A%5BRule%5D%0AFINAL%2CDIRECT%0A%0A%5BHost%5D%0Agrowtopia1.com%20%3D%2091.134.85.13%0Agrowtopia2.com%20%3D%2091.134.85.13%0Awww.growtopia1.com%20%3D%2091.134.85.13%0Awww.growtopia2.com%20%3D%2091.134.85.13" download="Growfax_Surge5.txt" id="btn3">Download — iOS (Surge)</a>
     <a class="btn btn-download" href="Growfax_Windows.txt" download id="btn4">Download — Windows</a>
     <a class="btn btn-download" href="Growfax_Macos.txt" download id="btn5">Download — macOS</a>
 
