--- a/index.html
+++ b/index.html
@@ -67,27 +67,42 @@
     }
 
     .btn {
+      /* Menggunakan 'button' dan 'a' agar seragam */
       display: block;
       width: 100%;
-      padding: 12px 14px;
-      margin: 8px 0;
+      padding: 14px 14px; /* Sedikit diperbesar agar mudah di-tap di HP */
+      margin: 10px 0; /* Margin diperbesar sedikit */
       border-radius: 8px;
       text-decoration: none;
       font-weight: 600;
       border: 0;
       cursor: pointer;
-      transition: 0.2s;
-      font-size: clamp(13px, 3vw, 15px);
+      transition: transform 0.1s ease, opacity 0.2s ease; /* Transisi lebih halus */
+      font-size: clamp(14px, 3vw, 16px); /* Ukuran font lebih responsif */
+      line-height: 1; /* Memastikan teks berada di tengah vertikal */
+      /* Mengatasi perbedaan reset default antara 'a' dan 'button' */
+      box-sizing: border-box; 
     }
 
     .btn-download {
       background: var(--btn-bg);
       color: var(--btn-text);
+      /* Menghilangkan border default button pada Firefox */
+      -moz-appearance: none; 
+      -webkit-appearance: none;
+      appearance: none;
     }
 
+    /* Efek hover dan active yang responsif */
     .btn-download:hover {
       opacity: 0.9;
-      transform: scale(1.02);
+      transform: scale(1.01); /* Efek scaling lebih halus untuk desktop */
+    }
+    
+    .btn-download:active {
+        /* Efek saat di-tap/di-klik, penting untuk HP */
+        opacity: 0.8;
+        transform: scale(0.99);
     }
 
     .controls {
@@ -104,7 +119,7 @@
       border: 1px solid rgba(255,255,255,0.1);
       color: var(--subtext);
       border-radius: 6px;
-      padding: 6px 10px;
+      padding: 8px 10px; /* Padding disesuaikan */
       cursor: pointer;
       font-size: clamp(12px, 2.5vw, 14px);
       transition: 0.2s;
@@ -144,6 +159,7 @@
       }
       .toggle, .lang {
         width: 100%;
+        min-width: auto; /* Memungkinkan kontrol untuk mengisi penuh lebar */
       }
     }
   </style>
@@ -194,7 +210,7 @@ www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13`
     };
 
-    // Fungsi Copy Teks yang Diperbarui
+    // Fungsi Copy Teks
     function copyText(key, buttonElement) {
         const textToCopy = configData[key];
         const originalText = buttonElement.innerText;
@@ -203,7 +219,8 @@ www.growtopia2.com = 91.134.85.13`
             // Beri umpan balik (feedback) visual bahwa teks berhasil disalin
             buttonElement.innerText = '✅ Copied!';
             setTimeout(() => {
-                buttonElement.innerText = originalText;
+                // Pulihkan teks asli, pastikan teks asli juga diterjemahkan
+                toggleLang(false); // Panggil toggleLang tanpa membalik bahasa
             }, 2000);
         }).catch(err => {
             console.error('Gagal menyalin teks: ', err);
@@ -229,8 +246,12 @@ www.growtopia2.com = 91.134.85.13`
 
     // Translation
     let lang = 'id';
-    function toggleLang() {
-      lang = (lang === 'id') ? 'en' : 'id';
+    // Fungsi diperbarui agar bisa dipanggil oleh fungsi copyText tanpa membalik 'lang'
+    function toggleLang(shouldToggle = true) {
+      if (shouldToggle) {
+          lang = (lang === 'id') ? 'en' : 'id';
+      }
+      
       const isEnglish = lang === 'en';
       document.querySelector('.lang').innerText = isEnglish ? "🌍 Indonesia" : "🌍 English";
 
